# blood-vessel-segmentation

./: .gitignore  README.MD  create_tf_lite_model.py  train.py
inference/: CMakeLists.txt  main.cpp
scripts/: create_dataset.py  data_augmentation.py  global_imports.py  list_files.py  loss_functions.py  u_net.py
